compiler/toc-hir-lowering/tests/snapshots/lowering__lower_put_stmt-8.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "put : 1"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..7): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..7): []
        Put@(FileId(1), 0..7): newline
          Literal@(FileId(1), 6..7): Integer(1)
error in file FileId(1) at 6..7: unexpected end of file
| error in file FileId(1) for 6..7: expected `,` after here

