compiler/toc-hir-lowering/tests/snapshots/lowering__lower_put_stmt.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: put a
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(0)
    Module@(src/main.t:0..5): "<root>"@(dummy)
      StmtBody@(src/main.t:0..5): []
        Put@(src/main.t:0..5): newline
          Name@(src/main.t:4..5): "a"@(src/main.t:4..5), undeclared
error at src/main.t:4..5: `a` is undeclared
| error for src/main.t:4..5: no definitions of `a` are in scope
