compiler/toc-hir-lowering/tests/snapshots/lowering__lower_range_expr-3.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "proc call end call var _ := call(1..*)"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(2)
    Module@(src/main.t:0..38): "<root>"@(dummy)
      StmtBody@(src/main.t:0..38): []
        StmtItem@(src/main.t:0..18): ItemId(0)
          Subprogram@(src/main.t:0..18): "call"@(src/main.t:5..9)
            Void@(src/main.t:0..9)
            StmtBody@(src/main.t:10..10): []
        StmtItem@(src/main.t:19..38): ItemId(1)
          ConstVar@(src/main.t:19..38): var "_"@(src/main.t:23..24)
            ExprBody@(src/main.t:28..38)
              CallExpr@(src/main.t:28..38): [...]
                Name@(src/main.t:28..32): "call"@(src/main.t:5..9)
                Range@(src/main.t:33..37): FromStart(ExprId(1)) .. AtEnd(SpanId(11))
                  Literal@(src/main.t:33..34): Integer(1)
