compiler/toc-hir-lowering/tests/snapshots/lowering__lower_range_expr-6.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "proc call end call var _ := call(*-1..1)"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(2)
    Module@(src/main.t:0..40): "<root>"@(dummy)
      StmtBody@(src/main.t:0..40): []
        StmtItem@(src/main.t:0..18): ItemId(0)
          Subprogram@(src/main.t:0..18): "call"@(src/main.t:5..9)
            Void@(src/main.t:0..9)
            StmtBody@(src/main.t:10..10): []
        StmtItem@(src/main.t:19..40): ItemId(1)
          ConstVar@(src/main.t:19..40): var "_"@(src/main.t:23..24)
            ExprBody@(src/main.t:28..40)
              CallExpr@(src/main.t:28..40): [...]
                Name@(src/main.t:28..32): "call"@(src/main.t:5..9)
                Range@(src/main.t:33..39): FromEnd(ExprId(1)) .. FromStart(ExprId(2))
                  Literal@(src/main.t:35..36): Integer(1)
                  Literal@(src/main.t:38..39): Integer(1)
