compiler/toc-hir-lowering/tests/snapshots/lowering__lower_real_literal-10.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int _ := 1e600"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..22): "<root>"@(dummy)
      StmtBody@(src/main.t:0..22): []
        StmtItem@(src/main.t:0..11): ItemId(0)
          ConstVar@(src/main.t:0..11): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..11): Int
        Assign@(src/main.t:12..22)
          Name@(src/main.t:12..13): "_"@(src/main.t:4..5)
          Literal@(src/main.t:17..22): Real(0.0)
error at src/main.t:17..22: invalid real literal
| error for src/main.t:17..22: number is too large
