compiler/toc-hir-lowering/tests/snapshots/lowering__lower_real_literal-11.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int _ := 1.0e600"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..24): "<root>"@(dummy)
      StmtBody@(src/main.t:0..24): []
        StmtItem@(src/main.t:0..11): ItemId(0)
          ConstVar@(src/main.t:0..11): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..11): Int
        Assign@(src/main.t:12..24)
          Name@(src/main.t:12..13): "_"@(src/main.t:4..5)
          Literal@(src/main.t:17..24): Real(0.0)
error at src/main.t:17..24: invalid real literal
| error for src/main.t:17..24: number is too large
